--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
     <div class="splash-right">
       <!-- Replace with your own photo URL -->
-      <img class="me" src="https://images.unsplash.com/photo-1544005313-94ddf0286df2?w=800&auto=format&fit=crop" alt="Jan Arroyo"/>
+      <img class="me" src="images/Hawaii.JPG" alt="Jan Arroyo"/>
 
       <!-- Spotify widget: replace the src with your own track/playlist/artist embed URL -->
       <div class="spotify-wrap">
