--- a/index.html
+++ b/index.html
@@ -32,13 +32,21 @@
     </div>
     <div class="splash-right">
       <!-- Replace with your own photo URL -->
-      <img class="me" src="images/Hawaii.JPG" alt="Jan Arroyo"/>
+      <div class="profile-container">
+        <img src="images/IMG_7173.jpeg" alt="Jan Arroyo" class="profile-img">
+        <div class="profile-description">
+            <p>Hi! I’m Jan, a USC student passionate about tech, consulting, and creating innovative projects.</p>
+        </div>
+    </div>
+    
 
       <!-- Spotify widget: replace the src with your own track/playlist/artist embed URL -->
-      <div class="spotify-wrap">
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/1IHWl5LamUGEuP4ozKQSXZ?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/3HqcNJdZ2seoGxhn0wVNDK?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-    </div>
+   <!-- Spotify widget for playlist -->
+<div class="spotify-wrap">
+    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5smyZhWovcHXWtWtTlRxQE?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+  </div>
+  
+      
   </header>
 
   
