Fix image path + add hover overlay, playlist

--- a/index.html
+++ b/index.html
@@ -31,19 +31,23 @@
       </div>
     </div>
     <div class="splash-right">
-      <!-- Replace with your own photo URL -->
-      <div class="profile-container">
-        <img src="images/IMG_7173.jpeg" alt="Jan Arroyo" class="profile-img">
-        <div class="profile-description">
-            <p>Hi! I’m Jan, a USC student passionate about tech, consulting, and creating innovative projects.</p>
-        </div>
+      <!-- Profile image with rotate + overlay description -->
+<div class="profile-container">
+    <img src="images/Hawaii.JPG" alt="Jan Arroyo" class="profile-img" />
+    <div class="profile-overlay">
+      <p>Hi! I’m Jan, a USC student passionate about tech, consulting, and creating innovative projects.</p>
     </div>
-    
-
-      <!-- Spotify widget: replace the src with your own track/playlist/artist embed URL -->
-   <!-- Spotify widget for playlist -->
-<div class="spotify-wrap">
-    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5smyZhWovcHXWtWtTlRxQE?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+  </div>
+  
+  <!-- Playlist (kept slim if you change height) -->
+  <div class="spotify-wrap">
+    <h3 class="spotify-title">My Current Playlist</h3>
+    <iframe style="border-radius:12px"
+      src="https://open.spotify.com/embed/playlist/5smyZhWovcHXWtWtTlRxQE?utm_source=generator&theme=0"
+      width="100%" height="152" frameborder="0"
+      allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+      loading="lazy">
+    </iframe>
   </div>
   
       
