--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="flip-face flip-back">
               <div class="about-back">
                 <!-- Upload your circle headshot as images/me-circle.jpg (or change src) -->
-                <img class="about-avatar" src="images/me-circle.jpg" alt="Jan – headshot">
+                <img class="about-avatar" src="images/headshot.JPG" alt="Jan – headshot">
                 <p class="about-intro">
                   I’ve been a builder for as long as I can remember. I like clear specs,
                   fast feedback loops, and shipping useful things with kind teams.
@@ -156,7 +156,7 @@
       }
     });
   })();
-  
+
   </script>
 </body>
 </html>
