Rename headshot to lowercase for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <!-- BACK: circular headshot + about -->
             <div class="flip-face flip-back">
               <div class="about-back">
-                <img class="about-avatar" src="images/headshot.jpg" alt="Jan – headshot">
+                <img class="about-avatar" src="images/headshot.JPG" alt="Jan – headshot">
                 <p class="about-intro">
                   I’ve been a builder for as long as I can remember. I like clear specs,
                   fast feedback loops, and shipping useful things with kind teams.
