Add Races, Bake (with Beli), and Travel pages + navbar

--- a/work.html
+++ b/work.html
@@ -7,15 +7,19 @@
   <link href="styles.css" rel="stylesheet" />
 </head>
 <body>
-  <nav class="nav">
-    <div class="container nav-inner">
-      <a class="brand" href="./">JAN</a>
-      <div class="nav-links">
-        <a class="btn" href="work.html">Work</a>
-        <a class="btn" href="./#contact">Contact</a>
-      </div>
-    </div>
-  </nav>
+    <nav class="nav">
+        <div class="container nav-inner">
+          <a class="brand" href="./">JAN</a>
+          <div class="nav-links">
+            <a class="btn" href="work.html">Projects</a>
+            <a class="btn" href="races.html">Races</a>
+            <a class="btn" href="bake.html">Bake</a>
+            <a class="btn" href="travel.html">Travel</a>
+            <a class="btn" href="#contact">Contact</a>
+          </div>
+        </div>
+      </nav>
+      
 
   <main class="container work">
     <h1 class="page-title">Projects</h1>
