--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
     <div class="container nav-inner">
       <a class="brand" href="./">JAN</a>
       <div class="nav-links">
-        <a class="btn" href="work.html">Work</a>
+        <a class="btn" href="work.html">Projects</a>
+        <a class="btn" href="races.html">Races</a>
+        <a class="btn" href="bake.html">Bake</a>
+        <a class="btn" href="travel.html">Travel</a>
         <a class="btn" href="#contact">Contact</a>
       </div>
     </div>
   </nav>
+  
 
   <!-- Landing / Splash -->
   <header class="container splash">
