--- a/races.html
+++ b/races.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Marathons and races by Jan Arroyo" />
   <link href="styles.css?v=7" rel="stylesheet" />
 </head>
-<body>
+<body class="plain-bg">
   <!-- Navbar -->
   <nav class="nav">
     <div class="container nav-inner">
@@ -21,13 +21,21 @@
       </div>
     </div>
   </nav>
-
+  <header class="container" style="padding-top:28px;">
+    <h1 class="page-title" style="margin:0 0 6px;">Races</h1>
+    <p class="tag">Most recent → oldest</p>
+  </header>
+  
   <main class="container work">
     <h1 class="page-title">Races</h1>
     <p class="tag">Marathons & distance events I’ve run.</p>
 
     <!-- === Race: Long Beach Half Marathon (Oct 6, 2024) === -->
-<section class="race" data-date="2024-10-06">
+    <section class="race" data-date="2024-10-06" id="long-beach-2024">
+        <div class="race-heading">
+          <h2>Long Beach Half Marathon</h2>
+          <div class="race-date">October 6, 2024</div>
+        </div>
     <div class="race-grid panel">
       <!-- Slider -->
       <div class="race-slider" data-race="long-beach-2024">
