Races: solid background, page header, per-race heading

--- a/races.html
+++ b/races.html
@@ -40,9 +40,9 @@
             <!-- Slider -->
             <div class="race-slider" data-race="long-beach-2024">
               <div class="slides">
-                <img src="images/races/long-beach-2024-1.jpg" alt="Long Beach Half Marathon 2024 – photo 1">
-                <img src="images/races/long-beach-2024-2.jpg" alt="Long Beach Half Marathon 2024 – photo 2">
-                <img src="images/races/long-beach-2024-3.jpg" alt="Long Beach Half Marathon 2024 – photo 3">
+                <img src="images/races/LongBeachHalf1.JPG" alt="Long Beach Half Marathon 2024 – photo 1">
+                <img src="images/races/LongBeachHalf2.JPG" alt="Long Beach Half Marathon 2024 – photo 2">
+                <img src="images/races/LongBeachHalf3.JPG" alt="Long Beach Half Marathon 2024 – photo 3">
               </div>
               <button class="nav prev" aria-label="Previous photo">‹</button>
               <button class="nav next" aria-label="Next photo">›</button>
