Races: solid background, page header, per-race heading

--- a/races.html
+++ b/races.html
@@ -74,17 +74,17 @@
         <p class="race-date">February 2, 2025</p>
         <div class="race-slideshow">
           <div class="slide active">
-            <img src="images/races/surfcity1.png" alt="Surf City Marathon 1">
+            <img src="images/races/SurfCity1.JPG" alt="Surf City Marathon 1">
           </div>
           <div class="slide">
-            <img src="images/races/surfcity2.png" alt="Surf City Marathon 2">
+            <img src="images/races/SurfCity2.JPG" alt="Surf City Marathon 2">
           </div>
           <div class="slide">
-            <img src="images/races/surfcity3.png" alt="Surf City Marathon 3">
+            <img src="images/races/SurfCity3.JPG" alt="Surf City Marathon 3">
           </div>
           <div class="slide">
             <video controls>
-              <source src="images/races/surfcity.mov" type="video/quicktime">
+              <source src="images/races/SurfCity4.mp4" type="video/quicktime">
               Your browser does not support the video tag.
             </video>
           </div>
