Races: solid background, page header, per-race heading

--- a/races.html
+++ b/races.html
@@ -115,6 +115,54 @@
       </div>
     </div>
   </section>
+
+  <!-- === Race: San Francisco 10K (Jul 27, 2025) === -->
+<section class="race" data-date="2025-07-27" id="sf10k-2025">
+    <div class="race-grid panel">
+      <!-- Header -->
+      <div class="race-bar">
+        <h2>San Francisco 10K</h2>
+        <span class="race-date">July 27, 2025</span>
+      </div>
+  
+      <!-- Body: slider + notes -->
+      <div class="race-body">
+        <!-- Slider -->
+        <div class="race-slider" data-race="sf10k-2025">
+          <div class="slides">
+            <!-- Drop in as many as you like; filenames below are examples -->
+            <img src="images/races/SF10K.JPG" alt="SF10K – bib & medal">
+            <img src="images/races/SF10K1.JPG" alt="SF10K – start line with friends">
+            <!-- If you have a short clip, you can add a video slide too:
+            <video controls>
+              <source src="images/races/SF10K7.mp4" type="video/mp4">
+            </video>
+            -->
+          </div>
+          <button class="nav prev" aria-label="Previous photo">‹</button>
+          <button class="nav next" aria-label="Next photo">›</button>
+          <div class="dots"></div>
+        </div>
+  
+        <!-- Notes -->
+        <aside class="race-notes">
+          <h3 class="race-title">San Francisco 10K</h3>
+          <div class="race-meta">July 27, 2025 · 6.2 miles</div>
+          <p>
+            Foggy, cool, perfect PR weather. Stayed relaxed through the first 3 miles,
+            then pushed the hills and kicked hard down the last stretch by the water.
+          </p>
+          <ul class="race-bullets">
+            <li>Course: rolling + coastal views</li>
+            <li>Fuel: light (water only) — gel pre-start</li>
+            <li>Shoes: (fill in)</li>
+            <li>Next goal: sub-<em>xx:xx</em> with stronger mid-race surge</li>
+          </ul>
+        </aside>
+      </div>
+    </div>
+  </section>
+  
   
       
       
