Races: solid background, page header, per-race heading

--- a/races.html
+++ b/races.html
@@ -131,8 +131,8 @@
         <div class="race-slider" data-race="sf10k-2025">
           <div class="slides">
             <!-- Drop in as many as you like; filenames below are examples -->
-            <img src="images/races/SF10K.HEIC" alt="SF10K – bib & medal">
-            <img src="images/races/SF10K1.HEIC" alt="SF10K – start line with friends">
+            <img src="images/races/SF10K.JPG" alt="SF10K – bib & medal">
+            <img src="images/races/SF10K1.JPG" alt="SF10K – start line with friends">
             <!-- If you have a short clip, you can add a video slide too:
             <video controls>
               <source src="images/races/SF10K7.mp4" type="video/mp4">
