--- a/races.html
+++ b/races.html
@@ -177,22 +177,9 @@
   </div></div>
 
   <script>
-    // Year in footer (if you use the same pattern)
-    document.getElementById('y') && (document.getElementById('y').textContent = new Date().getFullYear());
-  
-    // Sort races by date (newest → oldest)
-    (function sortRaces(){
-      const container = document.querySelector('main.container.work') || document.querySelector('main');
-      if(!container) return;
-      const races = Array.from(container.querySelectorAll('.race'));
-      races.sort((a,b) => (b.dataset.date||'').localeCompare(a.dataset.date||''));
-      races.forEach(r => container.insertBefore(r, container.querySelector('footer, script')));
-    })();
-  
-    // Simple slider
     (function initSliders(){
       document.querySelectorAll('.race-slider').forEach(slider => {
-        const track = slider.querySelector('.slides');
+        const track  = slider.querySelector('.slides');
         const slides = Array.from(track.children);
         if (!slides.length) return;
   
@@ -201,7 +188,6 @@
         const next = slider.querySelector('.next');
         const dotsWrap = slider.querySelector('.dots');
   
-        // Build dots
         dotsWrap.innerHTML = '';
         slides.forEach((_, i) => {
           const d = document.createElement('button');
@@ -211,9 +197,31 @@
         });
         const dots = Array.from(dotsWrap.children);
   
+        // --- NEW: auto-height based on current slide ---
+        function setHeight(){
+          const s = slides[idx];
+          if (!s) return;
+          // If it's an <img>, compute from natural size; videos get a default ratio
+          if (s.tagName === 'IMG') {
+            const img = s;
+            const calc = () => {
+              const w = slider.clientWidth || 1;
+              slider.style.height = (w * img.naturalHeight / img.naturalWidth) + 'px';
+            };
+            if (img.naturalWidth) calc();
+            else img.addEventListener('load', calc, { once: true });
+          } else if (s.tagName === 'VIDEO') {
+            // fallback height for video if metadata not loaded
+            const w = slider.clientWidth || 1;
+            slider.style.height = (w * 9 / 16) + 'px';
+          }
+        }
+        // ----------------------------------------------
+  
         function render(){
           track.style.transform = `translateX(${-idx * 100}%)`;
           dots.forEach((d,i)=>d.classList.toggle('active', i===idx));
+          setHeight();                   // <-- call after slide change
         }
         function go(i){
           idx = (i + slides.length) % slides.length;
@@ -221,21 +229,13 @@
         }
         prev.addEventListener('click', () => go(idx - 1));
         next.addEventListener('click', () => go(idx + 1));
+        window.addEventListener('resize', setHeight);  // keep height correct on resize
   
-        // Swipe (mobile)
-        let startX = 0, dragging = false;
-        slider.addEventListener('pointerdown', e => { dragging = true; startX = e.clientX; });
-        slider.addEventListener('pointerup', e => {
-          if(!dragging) return; dragging = false;
-          const dx = e.clientX - startX;
-          if (dx > 40) go(idx - 1);
-          if (dx < -40) go(idx + 1);
-        });
-  
-        render();
+        render(); // initial
       });
     })();
   </script>
+  
   
 
 </body>
