Races: solid background, page header, per-race heading

--- a/races.html
+++ b/races.html
@@ -26,6 +26,101 @@
     <h1 class="page-title">Races</h1>
     <p class="tag">Marathons & distance events I’ve run.</p>
 
+
+      <!-- === Race: San Francisco 10K (Jul 27, 2025) === -->
+<section class="race" data-date="2025-07-27" id="sf10k-2025">
+  <div class="race-grid panel">
+    <!-- Header -->
+    <div class="race-bar">
+      <h2>San Francisco 10K</h2>
+      <span class="race-date">July 27, 2025</span>
+    </div>
+
+    <!-- Body: slider + notes -->
+    <div class="race-body">
+      <!-- Slider -->
+      <div class="race-slider" data-race="sf10k-2025">
+        <div class="slides">
+          <!-- Drop in as many as you like; filenames below are examples -->
+          <img src="images/races/SF10K.JPG" alt="SF10K – bib & medal">
+          <img src="images/races/SF10K1.JPG" alt="SF10K – start line with friends">
+          <!-- If you have a short clip, you can add a video slide too:
+          <video controls>
+            <source src="images/races/SF10K7.mp4" type="video/mp4">
+          </video>
+          -->
+        </div>
+        <button class="nav prev" aria-label="Previous photo">‹</button>
+        <button class="nav next" aria-label="Next photo">›</button>
+        <div class="dots"></div>
+      </div>
+
+      <!-- Notes -->
+      <aside class="race-notes">
+        <h3 class="race-title">San Francisco 10K</h3>
+        <div class="race-meta">July 27, 2025 · 6.2 miles</div>
+        <p>
+          Foggy, cool, perfect PR weather. Stayed relaxed through the first 3 miles,
+          then pushed the hills and kicked hard down the last stretch by the water.
+        </p>
+        <ul class="race-bullets">
+          <li>Course: rolling + coastal views</li>
+          <li>Fuel: light (water only) — gel pre-start</li>
+          <li>Shoes: (fill in)</li>
+          <li>Next goal: sub-<em>xx:xx</em> with stronger mid-race surge</li>
+        </ul>
+      </aside>
+    </div>
+  </div>
+</section>
+
+ <!-- === Race: Surf City Marathon (Feb 2, 2025) === -->
+ <section class="race" data-date="2025-02-02" id="surf-city-2025">
+  <div class="race-grid panel">
+    <!-- Header inside the card -->
+    <div class="race-bar">
+      <h2>Surf City Marathon</h2>
+      <span class="race-date">February 2, 2025</span>
+    </div>
+
+    <!-- Body: slider + notes -->
+    <div class="race-body">
+      <!-- Slider (same component as Long Beach) -->
+      <div class="race-slider" data-race="surf-city-2025">
+        <div class="slides">
+          <img src="images/races/SurfCity1.JPG" alt="Surf City Marathon 2025 – photo 1">
+          <img src="images/races/SurfCity2.JPG" alt="Surf City Marathon 2025 – photo 2">
+          <img src="images/races/SurfCity3.JPG" alt="Surf City Marathon 2025 – photo 3">
+          <!-- video slide (mp4 recommended) -->
+          <video controls>
+            <source src="images/races/SurfCity4.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
+        </div>
+        <button class="nav prev" aria-label="Previous photo">‹</button>
+        <button class="nav next" aria-label="Next photo">›</button>
+        <div class="dots"></div>
+      </div>
+
+      <!-- Notes -->
+      <aside class="race-notes">
+        <h3 class="race-title">Surf City Marathon</h3>
+        <div class="race-meta">February 2, 2025 · 26.2 miles</div>
+        <p>
+          First full! Ocean views, big crowds, and a tough-but-fun last 10K.
+          Learned a ton about pacing and fueling for the full distance.
+        </p>
+        <ul class="race-bullets">
+          <li>Course: out-and-back along PCH</li>
+          <li>Fuel: gels + electrolytes every 5–6 miles</li>
+          <li>Shoes: (fill in)</li>
+          <li>Next goal: stronger last 10K</li>
+        </ul>
+      </aside>
+    </div>
+  </div>
+</section>
+
     <!-- === Race: Long Beach Half Marathon (Oct 6, 2024) === -->
     <section class="race" data-date="2024-10-06" id="long-beach-2024">
         <div class="race-grid panel">
@@ -69,99 +164,6 @@
         </div>
       </section>
       
-     <!-- === Race: Surf City Marathon (Feb 2, 2025) === -->
-<section class="race" data-date="2025-02-02" id="surf-city-2025">
-    <div class="race-grid panel">
-      <!-- Header inside the card -->
-      <div class="race-bar">
-        <h2>Surf City Marathon</h2>
-        <span class="race-date">February 2, 2025</span>
-      </div>
-  
-      <!-- Body: slider + notes -->
-      <div class="race-body">
-        <!-- Slider (same component as Long Beach) -->
-        <div class="race-slider" data-race="surf-city-2025">
-          <div class="slides">
-            <img src="images/races/SurfCity1.JPG" alt="Surf City Marathon 2025 – photo 1">
-            <img src="images/races/SurfCity2.JPG" alt="Surf City Marathon 2025 – photo 2">
-            <img src="images/races/SurfCity3.JPG" alt="Surf City Marathon 2025 – photo 3">
-            <!-- video slide (mp4 recommended) -->
-            <video controls>
-              <source src="images/races/SurfCity4.mp4" type="video/mp4">
-              Your browser does not support the video tag.
-            </video>
-          </div>
-          <button class="nav prev" aria-label="Previous photo">‹</button>
-          <button class="nav next" aria-label="Next photo">›</button>
-          <div class="dots"></div>
-        </div>
-  
-        <!-- Notes -->
-        <aside class="race-notes">
-          <h3 class="race-title">Surf City Marathon</h3>
-          <div class="race-meta">February 2, 2025 · 26.2 miles</div>
-          <p>
-            First full! Ocean views, big crowds, and a tough-but-fun last 10K.
-            Learned a ton about pacing and fueling for the full distance.
-          </p>
-          <ul class="race-bullets">
-            <li>Course: out-and-back along PCH</li>
-            <li>Fuel: gels + electrolytes every 5–6 miles</li>
-            <li>Shoes: (fill in)</li>
-            <li>Next goal: stronger last 10K</li>
-          </ul>
-        </aside>
-      </div>
-    </div>
-  </section>
-
-  <!-- === Race: San Francisco 10K (Jul 27, 2025) === -->
-<section class="race" data-date="2025-07-27" id="sf10k-2025">
-    <div class="race-grid panel">
-      <!-- Header -->
-      <div class="race-bar">
-        <h2>San Francisco 10K</h2>
-        <span class="race-date">July 27, 2025</span>
-      </div>
-  
-      <!-- Body: slider + notes -->
-      <div class="race-body">
-        <!-- Slider -->
-        <div class="race-slider" data-race="sf10k-2025">
-          <div class="slides">
-            <!-- Drop in as many as you like; filenames below are examples -->
-            <img src="images/races/SF10K.JPG" alt="SF10K – bib & medal">
-            <img src="images/races/SF10K1.JPG" alt="SF10K – start line with friends">
-            <!-- If you have a short clip, you can add a video slide too:
-            <video controls>
-              <source src="images/races/SF10K7.mp4" type="video/mp4">
-            </video>
-            -->
-          </div>
-          <button class="nav prev" aria-label="Previous photo">‹</button>
-          <button class="nav next" aria-label="Next photo">›</button>
-          <div class="dots"></div>
-        </div>
-  
-        <!-- Notes -->
-        <aside class="race-notes">
-          <h3 class="race-title">San Francisco 10K</h3>
-          <div class="race-meta">July 27, 2025 · 6.2 miles</div>
-          <p>
-            Foggy, cool, perfect PR weather. Stayed relaxed through the first 3 miles,
-            then pushed the hills and kicked hard down the last stretch by the water.
-          </p>
-          <ul class="race-bullets">
-            <li>Course: rolling + coastal views</li>
-            <li>Fuel: light (water only) — gel pre-start</li>
-            <li>Shoes: (fill in)</li>
-            <li>Next goal: sub-<em>xx:xx</em> with stronger mid-race surge</li>
-          </ul>
-        </aside>
-      </div>
-    </div>
-  </section>
   
   
       
@@ -199,23 +201,22 @@
   
         // --- NEW: auto-height based on current slide ---
         function setHeight(){
-          const s = slides[idx];
-          if (!s) return;
-          // If it's an <img>, compute from natural size; videos get a default ratio
-          if (s.tagName === 'IMG') {
-            const img = s;
-            const calc = () => {
-              const w = slider.clientWidth || 1;
-              slider.style.height = (w * img.naturalHeight / img.naturalWidth) + 'px';
-            };
-            if (img.naturalWidth) calc();
-            else img.addEventListener('load', calc, { once: true });
-          } else if (s.tagName === 'VIDEO') {
-            // fallback height for video if metadata not loaded
-            const w = slider.clientWidth || 1;
-            slider.style.height = (w * 9 / 16) + 'px';
-          }
-        }
+  // compute max height among all slides
+  let maxH = 0;
+  slides.forEach(s => {
+    if (s.tagName === 'IMG') {
+      if (s.naturalWidth) {
+        maxH = Math.max(maxH, slider.clientWidth * s.naturalHeight / s.naturalWidth);
+      }
+    } else if (s.tagName === 'VIDEO') {
+      const w = slider.clientWidth || 1;
+      // default to 16:9 ratio for video
+      maxH = Math.max(maxH, w * 9/16);
+    }
+  });
+  if (maxH > 0) slider.style.height = maxH + 'px';
+}
+
         // ----------------------------------------------
   
         function render(){
