races: update React widget and styles

--- a/races.html
+++ b/races.html
@@ -344,7 +344,7 @@
 
     /* ------------ strava follow ------------- */
     function StravaCard(){
-      const url = STRAVA_ATHLETE_ID ? `https://www.strava.com/athletes/${STRAVA_ATHLETE_ID}` : null;
+      const url = STRAVA_ATHLETE_ID ? `https://www.strava.com/athletes/${137523264}` : null;
       return (
         <div className="react-card react-strava">
           <div style={{fontSize:13, fontWeight:700, color:"#374151"}}>Follow me on Strava</div>
